--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.10.1",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "zp-z": "^0.3.2"
+    "zp-z": "^0.3.2",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@tweenjs/tween.js": "^17.4.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
